--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "starter",
+  "homepage": "https://prathamesh-webdesigner.github.io/prathamesh-thakur",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "@testing-library/user-event": "^13.2.1",
     "emailjs": "^4.0.1",
     "framer-motion": "^8.5.5",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -18,6 +20,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
