--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/user-event": "^13.2.1",
     "emailjs": "^4.0.1",
     "framer-motion": "^8.5.5",
-    "gh-pages": "^5.0.0",
+    "gh-pages": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -20,7 +20,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
